Addition of the projects page

--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -1,2 +1,5 @@
 <h1>{{pageTitle}}</h1>
-<p>This is amazing</p>
+<p>Navigate to different pages</p>
+<a href = "/">Home</a>
+<a href = "/about">About</a>
+<a href = "/projects">Projects</a>
